change agentbuilds rbac files
Signed-off-by: d0w <derekxu888@gmail.com>
Signed-off-by: Mariusz Sabath <mrsabath@gmail.com>

--- a/charts/kagenti-operator/templates/rbac/agentbuilds_admin_role.yaml
+++ b/charts/kagenti-operator/templates/rbac/agentbuilds_admin_role.yaml
@@ -14,15 +14,15 @@ metadata:
   name: kagenti-admin-role
 rules:
 - apiGroups:
-  - kagenti.operator.dev
+  - agent.kagenti.dev
   resources:
-  - platforms
+  - kagentiagentbuilds
   verbs:
   - '*'
 - apiGroups:
-  - kagenti.operator.dev
+  - agent.kagenti.dev
   resources:
-  - platforms/status
+  - kagentiagentbuilds/status
   verbs:
   - get
 {{- end -}}
