move crds and adjust names
Signed-off-by: d0w <derekxu888@gmail.com>
Signed-off-by: Mariusz Sabath <mrsabath@gmail.com>

--- a/kagenti-operator/Makefile
+++ b/kagenti-operator/Makefile
@@ -20,8 +20,8 @@ IMG ?= ${KO_DOCKER_REPO}/${CMD_NAME}:${IMAGE_TAG}
 ARCH := $(shell go env GOARCH)
 OS := $(shell go env GOOS)
 
-CLUSTER ?= kagenti
-CONTEXT ?= kind-kagenti
+CLUSTER ?= agent-platform
+CONTEXT ?= kind-agent-platform
 
 HELM_IMG := --set controllerManager.container.image.repository=${KO_DOCKER_REPO}/${CMD_NAME} --set controllerManager.container.image.tag=${IMAGE_TAG} 
 HELM_OPTS ?= ${HELM_IMG}
@@ -188,7 +188,7 @@ kind-load-image:
 
 .PHONY: install-local-chart
 install-local-chart: kind-load-image
-	if [ ! -n "$(CONTEXT)" ] ; then helm upgrade --install --create-namespace -n kagenti-system kagenti-operator ../charts/kagenti-operator ${HELM_OPTS} ; else helm  --kube-context ${CONTEXT} upgrade --install --create-namespace -n kagenti-system kagenti-operator ../charts/kagenti-operator ${HELM_OPTS} ; fi
+	if [ ! -n "$(CONTEXT)" ] ; then helm upgrade --install --create-namespace --debug -n kagenti-system kagenti-operator ../charts/kagenti-operator ${HELM_OPTS} ; else helm  --kube-context ${CONTEXT} upgrade --install --create-namespace --debug -n kagenti-system kagenti-operator ../charts/kagenti-operator ${HELM_OPTS} ; fi
 ##@ Dependencies
 
 ## Location to install dependencies to
