move crds and adjust names
Signed-off-by: d0w <derekxu888@gmail.com>
Signed-off-by: Mariusz Sabath <mrsabath@gmail.com>

--- a/charts/kagenti-operator/templates/metrics/metrics-service.yaml
+++ b/charts/kagenti-operator/templates/metrics/metrics-service.yaml
@@ -14,5 +14,5 @@ spec:
       name: https
   selector:
     control-plane: controller-manager
-    app.kubernetes.io/name: {{- include "chart.name" . }}
+    app.kubernetes.io/name: {{ include "chart.name" . }}
 {{- end }}
