Add agentcard appropriate labels to sample agent.
Signed-off-by: usize <mofoster@redhat.com>

--- a/kagenti-operator/config/samples/weather-agent-complete.yaml
+++ b/kagenti-operator/config/samples/weather-agent-complete.yaml
@@ -4,7 +4,9 @@ metadata:
   name: weather-agent
   namespace: kagenti
   labels:
-    app: weather-service
+    app.kubernetes.io/name: weather-agent
+    kagenti.io/type: agent
+    kagenti.io/agent-protocol: a2a
 
   annotations:
     description: "Weather data processing agent"
