Add AgentCard CRD for dynamic agent discovery
Implements dynamic agent discovery and indexing system:
- Add AgentCard CRD to cache A2A agent metadata
- Add AgentCardReconciler to sync agent card data from agents
- Add AgentCardSyncReconciler to auto-create AgentCards
- Add agentcard.Fetcher for protocol-aware card fetching
- Support A2A protocol via /.well-known/agent.json endpoint
- Use label-based selection (kagenti.io/type=agent, kagenti.io/agent-protocol=a2a)
- Follow existing Kagenti patterns for service discovery

Relates to #303

Signed-off-by: usize <mofoster@redhat.com>

--- a/kagenti-operator/config/rbac/role.yaml
+++ b/kagenti-operator/config/rbac/role.yaml
@@ -39,6 +39,7 @@ rules:
   - agent.kagenti.dev
   resources:
   - agentbuilds
+  - agentcards
   - agents
   verbs:
   - create
@@ -52,6 +53,7 @@ rules:
   - agent.kagenti.dev
   resources:
   - agentbuilds/finalizers
+  - agentcards/finalizers
   - agents/finalizers
   verbs:
   - update
@@ -59,6 +61,7 @@ rules:
   - agent.kagenti.dev
   resources:
   - agentbuilds/status
+  - agentcards/status
   - agents/status
   verbs:
   - get
