--- a/kagenti-operator/config/crd/kustomization.yaml
+++ b/kagenti-operator/config/crd/kustomization.yaml
@@ -15,5 +15,5 @@ patches:
 
 # [WEBHOOK] To enable webhook, uncomment the following section
 # the following config is for teaching kustomize how to do kustomization for CRDs.
-#configurations:
-#- kustomizeconfig.yaml
+configurations:
+- kustomizeconfig.yaml
