--- a/kagenti-operator/config/samples/test-agentbuild-withsteps.yaml
+++ b/kagenti-operator/config/samples/test-agentbuild-withsteps.yaml
@@ -9,15 +9,7 @@ spec:
     sourceRepository: "github.com/kagenti/agent-examples.git"
     sourceRevision: "main"
     sourceSubfolder: "a2a/weather_service"
-<<<<<<< HEAD
-<<<<<<< HEAD
     sourceCredentials:
-=======
-    sourceCredentials: 
->>>>>>> 0230991 (controller implementation of the agentbuild_controller)
-=======
-    sourceCredentials:
->>>>>>> 2b17fd5 (adds implementation of agentbuild api)
       name: github-token-secret
 
   pipeline:
@@ -25,18 +17,17 @@ spec:
     parameters:
     - name: SOURCE_REPO_SECRET
       value: github-token-secret
+    steps:
+      - name: git-clone
+        configMap: github-clone-step
+      - name: folder-check
+        configMap: check-subfolder-step
+      - name: kaniko-build
+        configMap: kaniko-docker-build-step
 
   buildOutput:
     image: "weather-service"
     imageTag: "v0.0.1"
     imageRegistry: "registry.cr-system.svc.cluster.local:5000"
     imageRepoCredentials:
-<<<<<<< HEAD
-<<<<<<< HEAD
       name: ghcr-secret
-=======
-      name: ghcr-secret
->>>>>>> 0230991 (controller implementation of the agentbuild_controller)
-=======
-      name: ghcr-secret
->>>>>>> 2b17fd5 (adds implementation of agentbuild api)
