--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -52,7 +52,7 @@ jobs:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-    - name: Package and push platoform operator chart
+    - name: Package and push platform operator chart
       run: |
         chartVersion=$(echo ${{ github.ref_name }} | cut -c 2-)
         chartPackageName="kagenti-platform-operator-chart-${chartVersion}.tgz"
@@ -60,5 +60,11 @@ jobs:
         sed -i "s/__PLACEHOLDER__/${chartVersion}/g" values.yaml
         helm package . --destination . --version ${chartVersion} --app-version ${chartVersion}
         helm push "./${chartPackageName}" oci://${{ env.REGISTRY }}/${{ env.REPO }}        
-    
-     
+    - name: Package and push kagenti operator chart
+      run: |
+        chartVersion=$(echo ${{ github.ref_name }} | cut -c 2-)
+        chartPackageName="kagenti-operator-chart-${chartVersion}.tgz"
+        cd ${{ env.CHARTS_PATH }}/kagenti-operator
+        sed -i "s/__PLACEHOLDER__/${chartVersion}/g" values.yaml
+        helm package . --destination . --version ${chartVersion} --app-version ${chartVersion}
+        helm push "./${chartPackageName}" oci://${{ env.REGISTRY }}/${{ env.REPO }}        
