--- a/charts/kagenti-operator/values.yaml
+++ b/charts/kagenti-operator/values.yaml
@@ -4,7 +4,7 @@ controllerManager:
   container:
     image:
       repository: ghcr.io/kagenti/kagenti-operator/kagenti-operator
-      tag: latest 
+      tag: __PLACEHOLDER__
     args:
       - "--leader-elect"
       - "--metrics-bind-address=:8443"
