--- a/charts/kagenti-operator/templates/rbac/http-route.yaml
+++ b/charts/kagenti-operator/templates/rbac/http-route.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: kagenti-operator-httproute
+  name: kagenti-operator-httproute-{{ .Release.Name }}
 rules:
 - apiGroups:
   - gateway.networking.k8s.io
@@ -22,7 +22,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: kagenti-operator-httproute-binding
+  name: kagenti-operator-httproute-binding-{{ .Release.Name }}
 subjects:
 - kind: ServiceAccount
   name: {{ .Values.controllerManager.serviceAccountName }}
