--- a/charts/kagenti-operator/templates/tekton/folder-check-step.yaml
+++ b/charts/kagenti-operator/templates/tekton/folder-check-step.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: check-subfolder-step
-  namespace: kagenti-system
+  name: tekton-check-subfolder-step
+  namespace: {{ .Release.Namespace }}
   labels:
     kagenti.operator.dev/tekton: step 
 data:
