--- a/charts/kagenti-operator/templates/tekton/kaniko-build-step-local.yaml
+++ b/charts/kagenti-operator/templates/tekton/kaniko-build-step-local.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: kaniko-docker-build-step-local
-  namespace: kagenti-system  
+  name: tekton-kaniko-docker-build-step-local
+  namespace: {{ .Release.Namespace }}  
   labels:
     kagenti.operator.dev/tekton: step 
 data:
