--- a/charts/kagenti-operator/templates/tekton/folder-check-step.yaml
+++ b/charts/kagenti-operator/templates/tekton/folder-check-step.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: tekton-check-subfolder-step
+  name: check-subfolder-step
   namespace: {{ .Release.Namespace }}
   labels:
     kagenti.operator.dev/tekton: step 
