--- a/charts/kagenti-operator/templates/webhook/service.yaml
+++ b/charts/kagenti-operator/templates/webhook/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kagenti-webhook-service
+  name: {{ include "chart.fullname" . }}-webhook-service
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "chart.labels" . | nindent 4 }}
