--- a/charts/kagenti-operator/templates/tekton/github-clone-step.yaml
+++ b/charts/kagenti-operator/templates/tekton/github-clone-step.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-   name: tekton-github-clone-step
-   namespace: {{ .Release.Namespace }} 
+   name: github-clone-step
+   namespace: {{ .Release.Namespace  }}
    labels:
          kagenti.operator.dev/tekton: step 
 data:
