--- a/charts/kagenti-operator/templates/tekton/pipeline-template-dev.yaml
+++ b/charts/kagenti-operator/templates/tekton/pipeline-template-dev.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: tekton-pipeline-template-dev
-  namespace: {{ .Release.Namespace }} 
+  name: pipeline-template-dev
+  namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: component-operator
     app.kubernetes.io/component: pipeline-template
@@ -11,7 +11,7 @@ data:
   template.json: |
     {
       "name": "Development Pipeline",
-      "namespace": {{ .Release.Namespace }},      
+      "namespace": {{ .Release.Namespace | quote}},      
       "description": "Basic pipeline for development builds",
       "requiredParameters": [
         "repo-url",
@@ -22,21 +22,21 @@ data:
       "steps": [
         {
           "name": "github-clone",
-          "configMap": "tekton-github-clone-step",
+          "configMap": "github-clone-step",
           "enabled": true,
           "description": "Clone source code from GitHub repository",
           "requiredParameters": ["repo-url"]
         },
         {
           "name": "folder-verification",
-          "configMap": "tekton-check-subfolder-step",
+          "configMap": "check-subfolder-step",
           "enabled": true,
           "description": "Verify that the specified subfolder exists",
           "requiredParameters": ["subfolder-path"]
         },
         {
           "name": "kaniko-build",
-          "configMap": "tekton-kaniko-docker-build-step",
+          "configMap": "kaniko-docker-build-step",
           "enabled": true,
           "description": "Build container image using Kaniko",
           "requiredParameters": ["image"]
